# hack_doctor_sk

./: .env.example  .gitignore  BUILD.MD  README.md  TODO.md  pyproject.toml  run.sh  setup.sh
agents/: ingestion_agent.md
app/: .databricksignore  app.yaml  requirements.txt  server.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.js
app/frontend/src/: main.jsx  styles.css
app/jobs/: run_agent.py
app/lib/: __init__.py  databricks.py  llm.py  pipeline.py  pipeline_state.py  reparser.py  store.py
app/lib/agents/: __init__.py  base.py  dedup.py  geo.py  risk.py  shortage.py
app/sql/: unity_catalog_state.sql
app/state/: scratchpad.md
docs/: facilities_data_quality.md
scripts/: setup_dbx_job.py
